provided .env in pipeline

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,6 +29,7 @@ jobs:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           heroku_app_name: "shielded-hollows-23366"
           heroku_email: "baxterjimuk@gmail.com"
+          env_file: ".env"
           healthcheck: "https://shielded-hollows-23366.herokuapp.com/health"
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
